comments: Add comments for .env

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,5 @@ CLICKHOUSE_HOST=
 CLICKHOUSE_PORT=
 CLICKHOUSE_USER=
 CLICKHOUSE_PASSWORD=
+
+; You can leave clickhouse fields empty if u use default ones
